# Clothify-Store

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
2/: architecture_diagram.md
3/: glossary.md  models_description.md
4/adr/: 0001-architecture-style.md  0002-layered-architecture.md  0003-api-style-and-error-model.md
4/swagger/: api_docs.md  openapi.yaml
api/: item_routes.py
domain/: models.py
instance/: shop.db
laba2/: Roadmap.md  business_doc.md
laba3/: entities.md
laba5/: 5.md
laba9/: text.md
labka4/swagger/: api_docs.md
service/: item_service.py  review_service.py
static/: style.css
static/js/: main.js
templates/: auth.html  index.html  product.html  profile.html
tests/: test_review_service.py
